# recoveredfactory-site

./: .gitignore  LICENSE  README.md  package.json  pnpm-lock.yaml  sst-env.d.ts  sst.config.ts
apps/web/: .eslintrc.cjs  package.json  prettier.config.cjs  svelte.config.js  tsconfig.json  vite.config.ts
apps/web/messages/: en.json  es.json
apps/web/project.inlang/: settings.json
apps/web/scripts/ddp/: .gitignore  pull.mjs  screenshot.mjs
apps/web/scripts/ddp/repro/: README.md  ddp_analysis.py  download_data.py  export_chart_data.py  notebook.py  pyproject.toml  sst.pyi
apps/web/src/: app.css  app.d.ts  app.html  hooks.server.ts  hooks.ts
apps/web/src/lib/: analytics.ts  config.ts  dates.ts  i18n.ts  images.ts  kit.ts  postCrosswalk.json  postCrosswalk.ts  support.ts
apps/web/src/lib/blog/: loader.ts
apps/web/src/lib/components/: BuildRotator.svelte  CodeBlock.svelte  Foldout.svelte  ResizedImage.svelte  SubscribeForm.svelte  SupportOptions.svelte
apps/web/src/lib/content/: ddp-dhs-response.md  ddp-numbers-ledger-es.md  ddp-numbers-ledger.md
apps/web/src/lib/data/: 287g-signings-chart-data.json  287g-state-table-data.json  ddp-chart-data.json
apps/web/src/lib/server/: ghostConfig.ts  posts.ts  rateLimit.ts  requireMember.ts
apps/web/src/routes/: +error.svelte  +layout.svelte  +page.server.ts  +page.svelte
apps/web/src/routes/[lang]/: +page.server.ts  +page.svelte
apps/web/src/routes/bench-notes/: +page.server.ts  +page.svelte
apps/web/src/routes/blog/: +page.server.ts
apps/web/static/videos/: .gitignore
(+59 files in other folders)
